Fixed improper frame size being displayed when viewed on mobile

--- a/styles/bikes&parts.css
+++ b/styles/bikes&parts.css
@@ -54,6 +54,8 @@
     color: inherit;
 }
 
+html { width: 393px; }
+
 body {
     width: 100%;
     font-size: 16px;
